// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Input Basic Usage 1`] = `
Object {
  "docs": "",
  "html": "<input
  placeholder=\\"Placeholder\\"
  color=\\"white\\"
  class=\\"drac-input drac-input-white drac-text-white\\"
/>
",
  "react": "<Input placeholder=\\"Placeholder\\" color=\\"white\\" />;
",
  "title": "Usage",
}
`;

exports[`Site: Input Colors 1`] = `
Object {
  "docs": "",
  "html": "<div style=\\"display: flex; flex-direction: column\\">
  <input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"white\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-outline drac-input-white drac-text-white\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"cyan\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-outline drac-input-cyan drac-text-cyan\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"green\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-outline drac-input-green drac-text-green\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"orange\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-outline drac-input-orange drac-text-orange\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"pink\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-outline drac-input-pink drac-text-pink\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"purple\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-outline drac-input-purple drac-text-purple\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"red\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-outline drac-input-red drac-text-red\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"yellow\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-outline drac-input-yellow drac-text-yellow\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"white\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-white drac-text-white\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"cyan\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-cyan drac-text-cyan\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"green\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-green drac-text-green\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"orange\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-orange drac-text-orange\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"pink\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-pink drac-text-pink\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"purple\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-purple drac-text-purple\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"red\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-red drac-text-red\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"yellow\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-yellow drac-text-yellow\\"
  />
</div>
",
  "react": "<div style={{ display: \\"flex\\", flexDirection: \\"column\\" }}>
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"white\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"cyan\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"green\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"orange\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"pink\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"purple\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"red\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"yellow\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"white\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"cyan\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"green\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"orange\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"pink\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"purple\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"red\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"yellow\\"
    style={{ marginBottom: 20 }}
  />
</div>;
",
  "title": "Colors",
}
`;

exports[`Site: Input Sizes 1`] = `
Object {
  "docs": "",
  "html": "<div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      placeholder=\\"Placeholder\\"
      color=\\"white\\"
      class=\\"drac-input drac-input-lg drac-input-white drac-text-white\\"
    />
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      placeholder=\\"Placeholder\\"
      color=\\"white\\"
      class=\\"drac-input drac-input-white drac-text-white\\"
    />
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      placeholder=\\"Placeholder\\"
      color=\\"white\\"
      class=\\"drac-input drac-input-sm drac-input-white drac-text-white\\"
    />
  </div>
</div>
",
  "react": "<div>
  <div style={{ marginBottom: 10 }}>
    <Input placeholder=\\"Placeholder\\" size=\\"large\\" color=\\"white\\" />
  </div>
  <div style={{ marginBottom: 10 }}>
    <Input placeholder=\\"Placeholder\\" size=\\"medium\\" color=\\"white\\" />
  </div>
  <div style={{ marginBottom: 10 }}>
    <Input placeholder=\\"Placeholder\\" size=\\"small\\" color=\\"white\\" />
  </div>
</div>;
",
  "title": "Sizes",
}
`;

exports[`Site: Input Variants 1`] = `
Object {
  "docs": "",
  "html": "<div style=\\"display: flex; flex-direction: column\\">
  <input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"white\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-white drac-text-white\\"
  /><input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"white\\"
    style=\\"margin-bottom: 20px\\"
    class=\\"drac-input drac-input-outline drac-input-white drac-text-white\\"
  />
</div>
",
  "react": "<div style={{ display: \\"flex\\", flexDirection: \\"column\\" }}>
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"normal\\"
    color=\\"white\\"
    style={{ marginBottom: 20 }}
  />
  <Input
    placeholder=\\"Placeholder\\"
    variant=\\"outline\\"
    color=\\"white\\"
    style={{ marginBottom: 20 }}
  />
</div>;
",
  "title": "Variants",
}
`;
